# slm-domain-foundry

./: .coveragerc  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  LICENSE  README.md  ai_slm_training.code-workspace  config.yaml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  domain_config.yaml  pyproject.toml  pytest.ini  repo_actions.md  requirements-core.txt  requirements-inference.txt  requirements-mps.txt  requirements-train.txt  requirements.txt  run_gradio_ui.py  run_local.ps1  run_local.sh  submit_unsloth.slurm
.gitea/workflows/: tests.yml
app/: __init__.py  chat.py  gradio_ui.py  model_loader.py  ollama_client.py  swarm.py
data/: __init__.py  bootstrap_fewshot.py  chunking.py  conversation_memory.py  csv_loader.py  curriculum.py  domain_config.py  financial_vocabulary.yaml  judge.py  judge_llm.py  knowledge_capture.py  knowledge_retriever.py  learning_agent.py  manual_extractor.py  medical_vocabulary.yaml  memory_promotion.py  pattern_embedder.py  pdf_extractor.py  prepare_training_data.py  question_templates.py  question_templates.yaml  segmented_memory.py  sql_vocabulary.yaml  template_expander.py  yaml_pattern_loader.py
demo/: __init__.py  chat.py  gradio_ui.py  model_loader.py  swarm.py
examples/: domain_config_financial.yaml  domain_config_sql.yaml
sample_data/: medical_qa.csv  sample_qa.csv
scripts/: diagnose_manual.py  export_for_from_scratch.py  run_tests_amdworkstation.sh  sample_medical_build.sh  security_scan.sh
tests/: AI_COVERAGE_IMPLEMENTATION.md  TESTING.md  conftest.py
train/: README_FROM_SCRATCH.md  __init__.py  config.py  finetune_cpu.py  finetune_unsloth.py  sharegpt_format.py
(+59 files in other folders)
