[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-domain-foundry"
version = "0.1.0"
description = "Domain-adaptive SLM training pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Altan Khendup" }]
dependencies = [
  "pdfplumber>=0.10.0",
  "PyPDF2>=3.0.0",
  "pyyaml>=6.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "requests>=2.28.0",
  "tqdm>=4.66.0",
  "regex>=2023.0",
  "charset-normalizer>=3.0.0",
]

[project.optional-dependencies]
train = [
  "torch>=2.1.0",
  "transformers>=4.36.0",
  "datasets>=2.14.0",
  "accelerate>=0.25.0",
  "peft>=0.7.0",
  "trl>=0.7.4",
  "bitsandbytes>=0.41.0",
  "safetensors>=0.4.0",
  "huggingface-hub>=0.20.0",
  "tokenizers>=0.15.0",
  "filelock>=3.12.0",
  "fsspec>=2023.0",
]
inference = [
  "torch>=2.1.0",
  "transformers>=4.36.0",
  "safetensors>=0.4.0",
  "huggingface-hub>=0.20.0",
  "tokenizers>=0.15.0",
  "optimum>=1.16.0",
  "onnxruntime>=1.17.0",
  "gradio>=4.0.0",
  "Pillow>=9.0.0",
]
mps = [
  "torch>=2.1.0",
  "transformers>=4.36.0",
  "datasets>=2.14.0",
  "accelerate>=0.25.0",
  "peft>=0.7.0",
  "trl>=0.7.4",
  "safetensors>=0.4.0",
  "huggingface-hub>=0.20.0",
  "tokenizers>=0.15.0",
  "filelock>=3.12.0",
  "fsspec>=2023.0",
  "optimum>=1.16.0",
  "onnxruntime>=1.17.0",
  "gradio>=4.0.0",
  "Pillow>=9.0.0",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["app*", "data*", "train*", "demo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
